// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`namespaceDef returns import table 1`] = `
ImportTable {
  "imports": Object {
    "": "\\\\NamespaceDef\\\\TestClassNamespace1",
  },
  "namespace": NamespaceName {
    "parts": Array [
      "ImportTable",
    ],
  },
}
`;

exports[`namespaceDef should assign namespace to phpDocument 1`] = `
PhpDocument {
  "classConstants": Array [],
  "classes": Array [
    Class {
      "extend": null,
      "implements": Array [],
      "location": Object {
        "range": Object {
          "end": 61,
          "start": 31,
        },
        "uri": "case/namespaceDef/class.php",
      },
      "modifier": SymbolModifier {
        "modifier": 0,
        "visibility": 0,
      },
      "name": TypeName {
        "name": "\\\\NamespaceDefTestClassNamespace1",
      },
      "traits": Array [],
    },
  ],
  "constants": Array [],
  "functions": Array [],
  "importTable": ImportTable {
    "imports": Object {},
    "namespace": NamespaceName {
      "parts": Array [
        "NamespaceDef",
      ],
    },
  },
  "methods": Array [],
  "modifiedTime": -1,
  "properties": Array [],
  "references": Array [],
}
`;

exports[`namespaceDef should assign namespace to phpDocument 2`] = `
PhpDocument {
  "classConstants": Array [],
  "classes": Array [],
  "constants": Array [
    Constant {
      "name": TypeName {
        "name": "\\\\NamespaceDefPI",
      },
      "type": TypeName {
        "name": "float",
      },
      "value": "3.14",
    },
  ],
  "functions": Array [],
  "importTable": ImportTable {
    "imports": Object {},
    "namespace": NamespaceName {
      "parts": Array [
        "NamespaceDef",
      ],
    },
  },
  "methods": Array [],
  "modifiedTime": -1,
  "properties": Array [],
  "references": Array [
    Constant {
      "name": TypeName {
        "name": "\\\\NamespaceDefPI",
      },
      "type": TypeName {
        "name": "float",
      },
      "value": "3.14",
    },
  ],
}
`;

exports[`namespaceDef should assign namespace to phpDocument 3`] = `
PhpDocument {
  "classConstants": Array [],
  "classes": Array [],
  "constants": Array [
    DefineConstant {
      "name": TypeName {
        "name": "\\\\NamespaceDefDEFINE_CONST",
      },
      "type": TypeName {
        "name": "string",
      },
      "value": "'Hello world!!!'",
    },
  ],
  "functions": Array [],
  "importTable": ImportTable {
    "imports": Object {},
    "namespace": NamespaceName {
      "parts": Array [
        "NamespaceDef",
      ],
    },
  },
  "methods": Array [],
  "modifiedTime": -1,
  "properties": Array [],
  "references": Array [
    FunctionCall {
      "location": Object {
        "range": Object {
          "end": 71,
          "start": 31,
        },
        "uri": "case/namespaceDef/defineConst.php",
      },
      "realSymbol": DefineConstant {
        "name": TypeName {
          "name": "\\\\NamespaceDefDEFINE_CONST",
        },
        "type": TypeName {
          "name": "string",
        },
        "value": "'Hello world!!!'",
      },
      "refKind": 1,
      "scope": null,
      "type": TypeName {
        "name": "",
      },
    },
    DefineConstant {
      "name": TypeName {
        "name": "\\\\NamespaceDefDEFINE_CONST",
      },
      "type": TypeName {
        "name": "string",
      },
      "value": "'Hello world!!!'",
    },
  ],
}
`;

exports[`namespaceDef should assign namespace to phpDocument 4`] = `
PhpDocument {
  "classConstants": Array [],
  "classes": Array [],
  "constants": Array [],
  "functions": Array [
    Function {
      "description": "",
      "name": TypeName {
        "name": "\\\\NamespaceDeffunction_with_namespace",
      },
      "parameters": Array [
        Parameter {
          "location": Object {
            "range": Object {
              "end": 215,
              "start": 208,
            },
            "uri": "case/namespaceDef/function.php",
          },
          "name": "$param1",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "\\\\NamespaceDef\\\\TestClassNamespace1",
              },
            ],
          },
          "value": "",
        },
        Parameter {
          "location": Object {
            "range": Object {
              "end": 224,
              "start": 217,
            },
            "uri": "case/namespaceDef/function.php",
          },
          "name": "$param2",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "\\\\FullyQualified\\\\Name\\\\Class",
              },
            ],
          },
          "value": "",
        },
        Parameter {
          "location": Object {
            "range": Object {
              "end": 238,
              "start": 226,
            },
            "uri": "case/namespaceDef/function.php",
          },
          "name": "$param3",
          "refKind": 3,
          "scope": null,
          "type": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "boolean",
              },
            ],
          },
          "value": "",
        },
      ],
      "scopeVar": ScopeVar {
        "location": Object {
          "range": Object {
            "end": 579,
            "start": 175,
          },
          "uri": "case/namespaceDef/function.php",
        },
        "variables": Object {
          "$param1": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "\\\\NamespaceDef\\\\TestClassNamespace1",
              },
            ],
          },
          "$param2": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "\\\\FullyQualified\\\\Name\\\\Class",
              },
            ],
          },
          "$param3": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "boolean",
              },
            ],
          },
          "$var1": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "boolean",
              },
            ],
          },
          "$var2": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "string",
              },
            ],
          },
          "$var3": TypeComposite {
            "_types": Array [
              TypeName {
                "name": "\\\\NamespaceDef\\\\CONSTANT_IN_NAMESPACE",
              },
            ],
          },
        },
      },
      "types": Array [
        TypeName {
          "name": "\\\\NamespaceDef\\\\CONSTANT_IN_NAMESPACE",
        },
        TypeName {
          "name": "string",
        },
        TypeName {
          "name": "\\\\NamespaceDef\\\\TestClassNamespace1",
        },
        TypeName {
          "name": "\\\\FullyQualified\\\\Name\\\\Class",
        },
        TypeName {
          "name": "boolean",
        },
      ],
    },
  ],
  "importTable": ImportTable {
    "imports": Object {},
    "namespace": NamespaceName {
      "parts": Array [
        "NamespaceDef",
      ],
    },
  },
  "methods": Array [],
  "modifiedTime": -1,
  "properties": Array [],
  "references": Array [
    Parameter {
      "location": Object {
        "range": Object {
          "end": 215,
          "start": 208,
        },
        "uri": "case/namespaceDef/function.php",
      },
      "name": "$param1",
      "refKind": 3,
      "scope": null,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "\\\\NamespaceDef\\\\TestClassNamespace1",
          },
        ],
      },
      "value": "",
    },
    Parameter {
      "location": Object {
        "range": Object {
          "end": 224,
          "start": 217,
        },
        "uri": "case/namespaceDef/function.php",
      },
      "name": "$param2",
      "refKind": 3,
      "scope": null,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "\\\\FullyQualified\\\\Name\\\\Class",
          },
        ],
      },
      "value": "",
    },
    Parameter {
      "location": Object {
        "range": Object {
          "end": 238,
          "start": 226,
        },
        "uri": "case/namespaceDef/function.php",
      },
      "name": "$param3",
      "refKind": 3,
      "scope": null,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
      },
      "value": "",
    },
    SimpleVariable {
      "name": "$var1",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
      },
    },
    ConstantAccess {
      "location": Object {
        "range": Object {
          "end": 259,
          "start": 254,
        },
        "uri": "case/namespaceDef/function.php",
      },
      "refKind": 6,
      "scope": null,
      "type": TypeName {
        "name": "boolean",
      },
      "value": "false",
    },
    SimpleVariable {
      "name": "$var2",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "string",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var3",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "\\\\NamespaceDef\\\\CONSTANT_IN_NAMESPACE",
          },
        ],
      },
    },
    ConstantAccess {
      "location": Object {
        "range": Object {
          "end": 313,
          "start": 292,
        },
        "uri": "case/namespaceDef/function.php",
      },
      "refKind": 6,
      "scope": null,
      "type": TypeName {
        "name": "\\\\NamespaceDef\\\\CONSTANT_IN_NAMESPACE",
      },
      "value": "CONSTANT_IN_NAMESPACE",
    },
    SimpleVariable {
      "name": "$var1",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var2",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "string",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var3",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "\\\\NamespaceDef\\\\CONSTANT_IN_NAMESPACE",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var3",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "\\\\NamespaceDef\\\\CONSTANT_IN_NAMESPACE",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var1",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var2",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "string",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var2",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "string",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var1",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$param1",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "\\\\NamespaceDef\\\\TestClassNamespace1",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var2",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "string",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$param2",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "\\\\FullyQualified\\\\Name\\\\Class",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$var3",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "\\\\NamespaceDef\\\\CONSTANT_IN_NAMESPACE",
          },
        ],
      },
    },
    SimpleVariable {
      "name": "$param3",
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
      },
    },
  ],
}
`;

exports[`namespaceDef should assign namespace to phpDocument 5`] = `
PhpDocument {
  "classConstants": Array [],
  "classes": Array [],
  "constants": Array [],
  "functions": Array [],
  "importTable": ImportTable {
    "imports": Object {
      "": "\\\\NamespaceDef\\\\TestClassNamespace1",
    },
    "namespace": NamespaceName {
      "parts": Array [
        "ImportTable",
      ],
    },
  },
  "methods": Array [],
  "modifiedTime": -1,
  "properties": Array [],
  "references": Array [],
}
`;
